[gd_scene load_steps=14 format=3 uid="uid://ckn5uoesaguy0"]

[ext_resource type="Script" path="res://systems/card_combat/card_player.gd" id="1_y0ggj"]
[ext_resource type="PackedScene" uid="uid://d11sabcwtgmsp" path="res://systems/card_combat/hand.tscn" id="2_mif1c"]
[ext_resource type="PackedScene" uid="uid://blifmtx3ipelv" path="res://systems/card_combat/cards/hand_card.tscn" id="4_j51k8"]
[ext_resource type="PackedScene" uid="uid://c6ng7re6x76bk" path="res://systems/card_combat/copy_of_card_stack.tscn" id="5_h5pty"]
[ext_resource type="Script" path="res://systems/ui/tooltips/show_tooltip.gd" id="5_l02yx"]
[ext_resource type="Texture2D" uid="uid://itwod5hjv66x" path="res://assets/ui/gameboard/board_corner_placeholder.png" id="5_luv56"]
[ext_resource type="Texture2D" uid="uid://ocajqsxf58s5" path="res://assets/ui/icons/karma_placeholder.png" id="5_otkj5"]
[ext_resource type="Texture2D" uid="uid://by4v5aq6yrqoh" path="res://assets/sprites/vfx/overlays/hurt_overlay.png" id="6_swmyn"]
[ext_resource type="Texture2D" uid="uid://bfd66tnlukp1w" path="res://assets/ui/icons/hp_placeholder.png" id="7_6dxbb"]
[ext_resource type="Script" path="res://systems/card_combat/hurt_overlay.gd" id="7_k4gqe"]
[ext_resource type="Texture2D" uid="uid://bdjknsdymfsjj" path="res://assets/ui/gameboard/health_bar_placeholder.png" id="8_2vgm4"]
[ext_resource type="Script" path="res://systems/effects/screenshake_cam.gd" id="8_y2d2q"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_fq2da"]

[node name="CardPlayer" type="ReferenceRect"]
custom_minimum_size = Vector2(300, 650)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_y0ggj")

[node name="Hand" parent="." instance=ExtResource("2_mif1c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(1042, 278)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_right = 0.5
offset_left = -521.0
offset_top = -278.0
offset_right = 521.0
mouse_filter = 2
show_rect = Rect2(0, 0.6, 1, 0.4)

[node name="Deck" type="ReferenceRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -35.0
offset_right = -50.0
offset_bottom = 615.0
grow_horizontal = 0
grow_vertical = 2
border_width = 0.0

[node name="CardStack" parent="Deck" node_paths=PackedStringArray("target") instance=ExtResource("5_h5pty")]
unique_name_in_owner = true
offset_left = -1476.0
offset_top = 469.0
offset_right = -1226.0
offset_bottom = 1119.0
scale = Vector2(0.6, 0.6)
target = NodePath("../../Hand")
deckCardTemplate = ExtResource("4_j51k8")

[node name="ResourceContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -540.0
offset_top = -540.0
grow_horizontal = 0
grow_vertical = 0

[node name="CornerBackground" type="TextureRect" parent="ResourceContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
texture = ExtResource("5_luv56")

[node name="KarmaIcon" type="TextureRect" parent="ResourceContainer"]
layout_mode = 0
offset_left = 376.0
offset_top = 376.0
offset_right = 508.0
offset_bottom = 508.0
texture = ExtResource("5_otkj5")

[node name="Label" type="Label" parent="ResourceContainer/KarmaIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShowTooltip" type="Control" parent="ResourceContainer/KarmaIcon"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_l02yx")
title = "Your Karma"
text = "Cards on your side of the boards will add their
combined cost to your karma total each turn.
Whenever your karma would go below zero the excess
amount is substracted from your health instead."

[node name="Health" type="Control" parent="ResourceContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="TextureProgressBar" parent="ResourceContainer/Health"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 5
texture_progress = ExtResource("8_2vgm4")
radial_initial_angle = 180.0
radial_fill_degrees = 90.0
radial_center_offset = Vector2(-270, -270)

[node name="HealthIcon" type="TextureRect" parent="ResourceContainer/Health"]
layout_mode = 0
offset_left = 112.0
offset_top = 408.0
offset_right = 244.0
offset_bottom = 540.0
texture = ExtResource("7_6dxbb")

[node name="HealthLabel" type="Label" parent="ResourceContainer/Health/HealthIcon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -1.0
offset_right = 53.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShowTooltip" type="Control" parent="ResourceContainer/Health/HealthIcon"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_l02yx")
title = "Your Health"
text = "Is lowered whenever an enemy card attacks an empty tile.
If it drops to zero you'll die!"

[node name="BonusDrawButton" type="Button" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 939.0
offset_right = 320.0
offset_bottom = 1003.0
theme_override_font_sizes/font_size = 18
text = "-2 K"

[node name="HurtOverlay" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_swmyn")
script = ExtResource("7_k4gqe")

[node name="ScreenshakeCamera2D" type="Camera2D" parent="."]
ignore_rotation = false
script = ExtResource("8_y2d2q")
noise = SubResource("FastNoiseLite_fq2da")
intensity = 10.0

[connection signal="button_down" from="BonusDrawButton" to="." method="_on_bonus_draw_button_button_down"]
